# pepterm

./: Cargo.toml  LICENSE  README.md
Formula/: pepterm.rb
src/: main.rs  model.rs  screen.rs  three.rs
